<resources>
    <string name="app_name">Khel Kabaddi</string>
    <string name="first_team_score">00</string>
    <string name="second_team_score">00</string>
    <string name="first_or_second_half">First Half</string>
    <string name="match_countdown_timer">20:00</string>
    <string name="first_team_players_in_court_label">Players In Court</string>
    <string name="first_team_players_in_court_count">7</string>
    <string name="second_team_players_in_court_label">Players In Court</string>
    <string name="second_team_players_in_court_count">7</string>
    <string name="raid_countdown_timer">30</string>
    <string name="first_team_raid">Raid</string>
    <string name="second_team_raid">Raid</string>
    <string name="first_team_touch_point">Touch Point</string>
    <string name="second_team_touch_point">Touch Point</string>
    <string name="first_team_tackle">Tackle</string>
    <string name="second_team_tackle">Tackle</string>
    <string name="start_second_half">Start Second Half</string>
    <string name="match_banner">Match Banner</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="app_logo">App Logo</string>
    <string name="game_play_countdown_timer_text">00:00</string>
    <string name="second_half">Second Half</string>
    <string name="match_summary">Match Summary</string>
    <string name="first_team_name">U Mumba!</string>
    <string name="second_team_name">Puneri Paltan</string>
    <string name="replay">Replay</string>
    <string name="match_time">Match time</string>
    <string name="raid_time">Raid time</string>
    <string name="congrats_mumba">Congratulations! U Mumba</string>
    <string name="congrats_paltan">Congratulations! Puneri Paltan</string>
    <string name="match_tie">Match Tie</string>
    <string name="first_half_started">First half started!</string>
    <string name="touch_point_mumba">1 Touch Point to U Mumba!</string>
    <string name="touch_point_paltan">1 Touch Point to Puneri Paltan!</string>
    <string name="tackle_point_mumba">1 Tackle Point to U Mumba!</string>
    <string name="tackle_point_paltan">1 Tackle Point to Puneri Paltan!</string>
    <string name="second_half_started">Second half started!</string>
    <string name="press_again_to_exit">Press back again to exit!</string>
    <string name="mumba_all_out">U Mumba all out! Puneri Paltan earns 2 extra points.</string>
    <string name="paltan_all_out">Puneri Paltan all out! U Mumba earns 2 extra points.</string>
    <string name="empty_raid">Empty Raid!</string>
    <string name="first_half_over">First half over</string>
    <string name="mumba_win">U Mumba won the match</string>
    <string name="puneri_paltan_win">Puneri Paltan won the match</string>
    <string name="match_tied">Match tie, Both teams get one point</string>
    <string name="match_time_cant_be_empty">Match time can\'t be empty!</string>
    <string name="raid_time_cant_be_empty">Raid time can\'t be empty!</string>
    <string name="match_time_cant_be_less">Match time can\'t be less than 2 minutes!</string>
    <string name="raid_time_cant_be_less">Raid time can\'t be less than 10 seconds!</string>
    <string name="match_time_cant_be_greater">Match time can\'t be greater than 40 minutes!</string>
    <string name="raid_time_cant_be_greater">Raid time can\'t be greater than 30 seconds!</string>
</resources>
